# rescribe

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  TODO.md  flake.nix
crates/formats/commonmark-fmt/: Cargo.toml
crates/formats/commonmark-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/djot-fmt/: Cargo.toml
crates/formats/djot-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/fb2-fmt/: Cargo.toml
crates/formats/fb2-fmt/src/: ast.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/fountain-fmt/: Cargo.toml
crates/formats/fountain-fmt/benches/: fountain_bench.rs
crates/formats/fountain-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/fountain-fmt/tests/: pandoc_harness.rs
crates/formats/haddock-fmt/: Cargo.toml
crates/formats/haddock-fmt/benches/: haddock_bench.rs
crates/formats/haddock-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/haddock-fmt/tests/: pandoc_harness.rs
crates/formats/html-fmt/: Cargo.toml
crates/formats/html-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/mediawiki-fmt/: Cargo.toml
crates/formats/mediawiki-fmt/benches/: mediawiki_bench.rs
crates/formats/mediawiki-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/mediawiki-fmt/tests/: pandoc_harness.rs
crates/formats/muse-fmt/: Cargo.toml
crates/formats/muse-fmt/benches/: muse_bench.rs
crates/formats/muse-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/muse-fmt/tests/: pandoc_harness.rs
crates/formats/odf-fmt/: Cargo.toml  build.rs
crates/formats/odf-fmt/src/: ast.rs  batch.rs  error.rs  events.rs  generated.rs  lib.rs  parser.rs  writer.rs
crates/formats/odf-fmt/tests/: generate_fixtures.rs  roundtrip.rs
crates/formats/ooxml-opc/: Cargo.toml
crates/formats/ooxml-opc/src/: error.rs  lib.rs  packaging.rs  relationships.rs
crates/formats/ooxml-wml/: Cargo.toml  build.rs
crates/formats/ooxml-wml/examples/: create_docx.rs  read_docx.rs  read_metadata.rs
crates/formats/ooxml-wml/src/: batch.rs  document.rs  error.rs  events.rs  ext.rs  generated_events.rs  generated_parsers.rs  generated_serializers.rs  lib.rs  numbering.rs  streaming.rs  writer.rs
crates/formats/ooxml-wml/tests/: corpus.rs  feature_roundtrip.rs  integration.rs  parity_tests.rs  test_error_handling.rs  test_generated_parsers.rs  test_generated_serializers.rs
crates/formats/ooxml-xml/: Cargo.toml
crates/formats/ooxml-xml/src/: raw_xml.rs  serde_helpers.rs
crates/formats/pod-fmt/: Cargo.toml
crates/formats/pod-fmt/benches/: pod_bench.rs
crates/formats/pod-fmt/src/: ast.rs  batch.rs  emit.rs  events.rs  lib.rs  parse.rs  writer.rs
crates/formats/pod-fmt/tests/: pandoc_harness.rs
crates/formats/rst-fmt/: Cargo.toml
crates/formats/rtf-fmt/: Cargo.toml
crates/formats/t2t/: Cargo.toml
crates/formats/texinfo/: Cargo.toml
crates/formats/textile-fmt/: Cargo.toml
crates/formats/twiki/: Cargo.toml
crates/ooxml-dml/: Cargo.toml  build.rs
crates/ooxml-dml/src/: ext.rs  generated.rs  generated_parsers.rs  generated_serializers.rs  lib.rs
crates/ooxml-fixtures/: Cargo.toml
crates/ooxml-omml/: Cargo.toml
crates/ooxml-omml/src/: math.rs
crates/ooxml-pml/: Cargo.toml
crates/ooxml-pml/src/: generated.rs  lib.rs  presentation.rs  writer.rs
crates/ooxml-sml/: Cargo.toml
crates/ooxml-sml/src/: generated_serializers.rs  lib.rs  writer.rs
crates/ooxml-wml/: Cargo.toml
crates/ooxml-wml/src/: convenience.rs  document.rs  ext.rs  generated.rs  generated_parsers.rs  generated_serializers.rs  lib.rs  writer.rs
crates/readers/rescribe-read-ansi/: Cargo.toml
crates/rescribe/: Cargo.toml
crates/rescribe-fixtures/: Cargo.toml
crates/rescribe-fixtures/src/: lib.rs  pandoc_harness.rs
crates/rescribe-fixtures/tests/: pandoc.rs  run.rs
crates/rescribe/src/: lib.rs
crates/rescribe/tests/: feature_coverage.rs
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_djot_roundtrip/: crash-4375aab0332473aad6276ecd0e3bd993b860c82f  crash-50480043e6b2855fcd93237f5c0717a401eba5d3  crash-54b64dc2f8fe431a72ccfaa4c6fdf8aa73a66ed0  crash-5c37e5e02c80625163807a3c4d31c965977984c9  crash-b8d1827cc0e98230f38cebdc8a68d3235edead3c  minimized-from-4375aab0332473aad6276ecd0e3bd993b860c82f
fuzz/artifacts/fuzz_rtf_reader/: crash-d41eed8a51814af1c98cd2318b8dd3c0ce9f9b91
fuzz/artifacts/fuzz_rtf_roundtrip/: crash-61de29e50d9830d8c356a9188445964c7f1fe8f7  crash-93ab318849e1c75b07b6d3e2a1d367168d968834  minimized-from-0903ba559a05ef5d6b821d4eb3d90d5bf8c01f0a  minimized-from-1907cbfbfa68d616385c3ef539c21cbaf567cc16  minimized-from-27fc38bcf52a568d8e4ed68ebcd5e6365105a8d1  minimized-from-69e97c82129713513a5dbe70aec2a0e9e4a7ddd7  minimized-from-743c5311509ae7d970a7a1e4d8d52245982d1490  minimized-from-9228aefc1aec12dc45bb38c84c9cdbab4d5071cf  minimized-from-93ab318849e1c75b07b6d3e2a1d367168d968834  minimized-from-944d17f798d0502cc985d1edb358adc8d817606f  minimized-from-95082cb9fbacf8bb0b6ed37d107db465ffe159a0  minimized-from-ca36617c3fe219ed2b2ac7e8db98d08c9a85a314  minimized-from-deac70c2035c2cc543d481aad5f9b3827106f0fd
fuzz/fuzz_targets/: ansi_reader.rs  ansi_roundtrip.rs  asciidoc_reader.rs  asciidoc_roundtrip.rs  bbcode_reader.rs  bbcode_roundtrip.rs  beamer_writer.rs  biblatex_reader.rs  bibtex_reader.rs  chunkedhtml_writer.rs  commonmark_reader.rs  commonmark_roundtrip.rs  context_writer.rs  creole_reader.rs  creole_roundtrip.rs  csl_json_reader.rs  csv_reader.rs  csv_roundtrip.rs  djot_fmt_reader.rs  djot_fmt_roundtrip.rs  djot_reader.rs  djot_roundtrip.rs  docbook_reader.rs  docx_reader.rs  docx_roundtrip.rs  dokuwiki_reader.rs  dokuwiki_roundtrip.rs  dzslides_writer.rs  endnotexml_reader.rs  epub_reader.rs  epub_roundtrip.rs  fb2_reader.rs  fb2_roundtrip.rs  fountain_reader.rs  fountain_roundtrip.rs  gfm_reader.rs  haddock_reader.rs  haddock_roundtrip.rs  icml_writer.rs  ipynb_reader.rs  (+60 more)
(+4887 files in other folders)
