[workspace]
resolver = "2"
members = [
    "crates/ooxml",
    "crates/ooxml-xml",
    "crates/ooxml-dml",
    "crates/ooxml-omml",
    "crates/ooxml-wml",
    "crates/ooxml-sml",
    "crates/ooxml-pml",
    "crates/ooxml-codegen",
    "crates/ooxml-corpus",
    "crates/ooxml-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/ooxml"
readme = "README.md"

[workspace.dependencies]
# Internal crates
ooxml-opc = { path = "crates/ooxml", version = "0.1.0" }
ooxml-xml = { path = "crates/ooxml-xml", version = "0.1.0" }
ooxml-dml = { path = "crates/ooxml-dml", version = "0.1.0" }
ooxml-wml = { path = "crates/ooxml-wml", version = "0.1.0" }
ooxml-sml = { path = "crates/ooxml-sml", version = "0.1.0" }
ooxml-pml = { path = "crates/ooxml-pml", version = "0.1.0" }
ooxml-omml = { path = "crates/ooxml-omml", version = "0.1.0" }
ooxml-codegen = { path = "crates/ooxml-codegen", version = "0.1.0" }
ooxml-corpus = { path = "crates/ooxml-corpus" }

# External dependencies
zip = "7"
quick-xml = { version = "0.39", features = ["serialize"] }
thiserror = "2"
insta = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
rayon = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
