[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/rescribe",
    "crates/rescribe-core",
    "crates/nodes/*",
    "crates/formats/*",
    "crates/readers/*",
    "crates/writers/*",
    "crates/rescribe-transforms",
    "crates/rescribe-cli",
    "crates/rescribe-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rhi-zone/rescribe"

[workspace.dependencies]
# Internal crates
rescribe-core = { path = "crates/rescribe-core" }
rescribe-std = { path = "crates/nodes/rescribe-std" }
rescribe-math = { path = "crates/nodes/rescribe-math" }
rescribe-read-markdown = { path = "crates/readers/rescribe-read-markdown" }
rescribe-write-markdown = { path = "crates/writers/rescribe-write-markdown" }
rescribe-read-html = { path = "crates/readers/rescribe-read-html" }
rescribe-read-latex = { path = "crates/readers/rescribe-read-latex" }
rescribe-read-org = { path = "crates/readers/rescribe-read-org" }
rescribe-write-html = { path = "crates/writers/rescribe-write-html" }
rescribe-write-plaintext = { path = "crates/writers/rescribe-write-plaintext" }
rescribe-write-latex = { path = "crates/writers/rescribe-write-latex" }
rescribe-write-org = { path = "crates/writers/rescribe-write-org" }
rescribe-read-pandoc-json = { path = "crates/readers/rescribe-read-pandoc-json" }
rescribe-read-pdf = { path = "crates/readers/rescribe-read-pdf" }
rescribe-write-pandoc-json = { path = "crates/writers/rescribe-write-pandoc-json" }
rescribe-transforms = { path = "crates/rescribe-transforms" }
rescribe-read-docx = { path = "crates/readers/rescribe-read-docx" }
rescribe-write-docx = { path = "crates/writers/rescribe-write-docx" }
rescribe-read-ipynb = { path = "crates/readers/rescribe-read-ipynb" }
rescribe-write-ipynb = { path = "crates/writers/rescribe-write-ipynb" }
rescribe-read-xlsx = { path = "crates/readers/rescribe-read-xlsx" }
rescribe-read-epub = { path = "crates/readers/rescribe-read-epub" }
rescribe-write-epub = { path = "crates/writers/rescribe-write-epub" }
rescribe-read-djot = { path = "crates/readers/rescribe-read-djot" }
rescribe-write-djot = { path = "crates/writers/rescribe-write-djot" }
rescribe-read-opml = { path = "crates/readers/rescribe-read-opml" }
rescribe-write-opml = { path = "crates/writers/rescribe-write-opml" }
rescribe-read-mediawiki = { path = "crates/readers/rescribe-read-mediawiki" }
rescribe-write-mediawiki = { path = "crates/writers/rescribe-write-mediawiki" }
rescribe-read-bibtex = { path = "crates/readers/rescribe-read-bibtex" }
rescribe-read-csl-json = { path = "crates/readers/rescribe-read-csl-json" }
rescribe-write-csl-json = { path = "crates/writers/rescribe-write-csl-json" }
rescribe-read-docbook = { path = "crates/readers/rescribe-read-docbook" }
rescribe-write-docbook = { path = "crates/writers/rescribe-write-docbook" }
rescribe-read-rst = { path = "crates/readers/rescribe-read-rst" }
rescribe-read-asciidoc = { path = "crates/readers/rescribe-read-asciidoc" }
rescribe-write-rst = { path = "crates/writers/rescribe-write-rst" }
rescribe-write-asciidoc = { path = "crates/writers/rescribe-write-asciidoc" }
rescribe-write-bibtex = { path = "crates/writers/rescribe-write-bibtex" }
rescribe-read-typst = { path = "crates/readers/rescribe-read-typst" }
rescribe-write-typst = { path = "crates/writers/rescribe-write-typst" }
rescribe-write-ansi = { path = "crates/writers/rescribe-write-ansi" }
rescribe-read-dokuwiki = { path = "crates/readers/rescribe-read-dokuwiki" }
rescribe-write-dokuwiki = { path = "crates/writers/rescribe-write-dokuwiki" }
rescribe-read-jats = { path = "crates/readers/rescribe-read-jats" }
rescribe-write-jats = { path = "crates/writers/rescribe-write-jats" }
rescribe-read-tei = { path = "crates/readers/rescribe-read-tei" }
rescribe-write-tei = { path = "crates/writers/rescribe-write-tei" }
rescribe-read-man = { path = "crates/readers/rescribe-read-man" }
rescribe-write-man = { path = "crates/writers/rescribe-write-man" }
rescribe-read-jira = { path = "crates/readers/rescribe-read-jira" }
rescribe-write-jira = { path = "crates/writers/rescribe-write-jira" }
rescribe-read-creole = { path = "crates/readers/rescribe-read-creole" }
rescribe-write-creole = { path = "crates/writers/rescribe-write-creole" }
rescribe-read-textile = { path = "crates/readers/rescribe-read-textile" }
rescribe-write-textile = { path = "crates/writers/rescribe-write-textile" }
rescribe-read-haddock = { path = "crates/readers/rescribe-read-haddock" }
rescribe-write-haddock = { path = "crates/writers/rescribe-write-haddock" }
rescribe-read-muse = { path = "crates/readers/rescribe-read-muse" }
rescribe-write-muse = { path = "crates/writers/rescribe-write-muse" }
rescribe-read-t2t = { path = "crates/readers/rescribe-read-t2t" }
rescribe-write-t2t = { path = "crates/writers/rescribe-write-t2t" }
rtf-fmt = { path = "crates/formats/rtf-fmt" }
rst-fmt = { path = "crates/formats/rst-fmt" }
asciidoc = { path = "crates/formats/asciidoc" }
org-fmt = { path = "crates/formats/org-fmt" }
textile-fmt = { path = "crates/formats/textile-fmt" }
markua = { path = "crates/formats/markua" }
texinfo = { path = "crates/formats/texinfo" }
t2t = { path = "crates/formats/t2t" }
vimwiki-fmt = { path = "crates/formats/vimwiki-fmt" }
muse-fmt = { path = "crates/formats/muse-fmt" }
jira-fmt = { path = "crates/formats/jira-fmt" }
zimwiki = { path = "crates/formats/zimwiki" }
pod-fmt = { path = "crates/formats/pod-fmt" }
haddock-fmt = { path = "crates/formats/haddock-fmt" }
creole = { path = "crates/formats/creole" }
csv-fmt = { path = "crates/formats/csv-fmt" }
man-fmt = { path = "crates/formats/man-fmt" }
mediawiki-fmt = { path = "crates/formats/mediawiki-fmt" }
fountain-fmt = { path = "crates/formats/fountain-fmt" }
twiki = { path = "crates/formats/twiki" }
tikiwiki = { path = "crates/formats/tikiwiki" }
xwiki = { path = "crates/formats/xwiki" }
bbcode-fmt = { path = "crates/formats/bbcode-fmt" }
dokuwiki = { path = "crates/formats/dokuwiki" }
ansi-fmt = { path = "crates/formats/ansi-fmt" }
ris = { path = "crates/formats/ris" }
native = { path = "crates/formats/native" }
tsv-fmt = { path = "crates/formats/tsv-fmt" }
rescribe-read-rtf = { path = "crates/readers/rescribe-read-rtf" }
rescribe-write-rtf = { path = "crates/writers/rescribe-write-rtf" }
rescribe-read-vimwiki = { path = "crates/readers/rescribe-read-vimwiki" }
rescribe-write-vimwiki = { path = "crates/writers/rescribe-write-vimwiki" }
rescribe-read-zimwiki = { path = "crates/readers/rescribe-read-zimwiki" }
rescribe-write-zimwiki = { path = "crates/writers/rescribe-write-zimwiki" }
rescribe-read-pod = { path = "crates/readers/rescribe-read-pod" }
rescribe-write-pod = { path = "crates/writers/rescribe-write-pod" }
rescribe-read-markua = { path = "crates/readers/rescribe-read-markua" }
rescribe-write-markua = { path = "crates/writers/rescribe-write-markua" }
rescribe-read-fb2 = { path = "crates/readers/rescribe-read-fb2" }
rescribe-write-fb2 = { path = "crates/writers/rescribe-write-fb2" }
rescribe-read-texinfo = { path = "crates/readers/rescribe-read-texinfo" }
rescribe-write-texinfo = { path = "crates/writers/rescribe-write-texinfo" }
rescribe-read-tikiwiki = { path = "crates/readers/rescribe-read-tikiwiki" }
rescribe-write-tikiwiki = { path = "crates/writers/rescribe-write-tikiwiki" }
rescribe-read-twiki = { path = "crates/readers/rescribe-read-twiki" }
rescribe-write-twiki = { path = "crates/writers/rescribe-write-twiki" }
rescribe-read-xwiki = { path = "crates/readers/rescribe-read-xwiki" }
rescribe-write-xwiki = { path = "crates/writers/rescribe-write-xwiki" }
rescribe-write-revealjs = { path = "crates/writers/rescribe-write-revealjs" }
rescribe-write-slidy = { path = "crates/writers/rescribe-write-slidy" }
rescribe-write-s5 = { path = "crates/writers/rescribe-write-s5" }
rescribe-write-dzslides = { path = "crates/writers/rescribe-write-dzslides" }
rescribe-read-bbcode = { path = "crates/readers/rescribe-read-bbcode" }
rescribe-write-bbcode = { path = "crates/writers/rescribe-write-bbcode" }
rescribe-read-ansi = { path = "crates/readers/rescribe-read-ansi" }
rescribe-write-beamer = { path = "crates/writers/rescribe-write-beamer" }
rescribe-read-csv = { path = "crates/readers/rescribe-read-csv" }
rescribe-write-csv = { path = "crates/writers/rescribe-write-csv" }
rescribe-write-context = { path = "crates/writers/rescribe-write-context" }
rescribe-write-ms = { path = "crates/writers/rescribe-write-ms" }
rescribe-write-chunkedhtml = { path = "crates/writers/rescribe-write-chunkedhtml" }
rescribe-read-tsv = { path = "crates/readers/rescribe-read-tsv" }
rescribe-write-tsv = { path = "crates/writers/rescribe-write-tsv" }
rescribe-write-icml = { path = "crates/writers/rescribe-write-icml" }
rescribe-write-slideous = { path = "crates/writers/rescribe-write-slideous" }
rescribe-write-odt = { path = "crates/writers/rescribe-write-odt" }
rescribe-read-native = { path = "crates/readers/rescribe-read-native" }
rescribe-write-native = { path = "crates/writers/rescribe-write-native" }
rescribe-write-pptx = { path = "crates/writers/rescribe-write-pptx" }
rescribe-read-odt = { path = "crates/readers/rescribe-read-odt" }
rescribe-read-pptx = { path = "crates/readers/rescribe-read-pptx" }
rescribe-read-commonmark = { path = "crates/readers/rescribe-read-commonmark" }
rescribe-write-commonmark = { path = "crates/writers/rescribe-write-commonmark" }
rescribe-read-gfm = { path = "crates/readers/rescribe-read-gfm" }
rescribe-write-gfm = { path = "crates/writers/rescribe-write-gfm" }
rescribe-read-ris = { path = "crates/readers/rescribe-read-ris" }
rescribe-write-ris = { path = "crates/writers/rescribe-write-ris" }
rescribe-read-endnotexml = { path = "crates/readers/rescribe-read-endnotexml" }
rescribe-write-endnotexml = { path = "crates/writers/rescribe-write-endnotexml" }
rescribe-write-xlsx = { path = "crates/writers/rescribe-write-xlsx" }
rescribe-read-biblatex = { path = "crates/readers/rescribe-read-biblatex" }
rescribe-write-biblatex = { path = "crates/writers/rescribe-write-biblatex" }
rescribe-read-markdown-strict = { path = "crates/readers/rescribe-read-markdown-strict" }
rescribe-write-markdown-strict = { path = "crates/writers/rescribe-write-markdown-strict" }
rescribe-read-multimarkdown = { path = "crates/readers/rescribe-read-multimarkdown" }
rescribe-write-multimarkdown = { path = "crates/writers/rescribe-write-multimarkdown" }
rescribe-read-fountain = { path = "crates/readers/rescribe-read-fountain" }
rescribe-write-fountain = { path = "crates/writers/rescribe-write-fountain" }

# CLI crate
rescribe = { path = "crates/rescribe" }

# Test infrastructure
rescribe-fixtures = { path = "crates/rescribe-fixtures" }

# External dependencies
typst-syntax = "0.14"
ooxml-wml = "0.1.1-alpha.2"
ooxml-sml = "0.1.1-alpha.2"
ooxml-pml = "0.1.1-alpha.2"
ooxml-dml = "0.1.1-alpha.2"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
html5ever = "0.36"
markup5ever_rcdom = "0.36"
pdf-extract = "0.10"
quick-xml = "0.39"
toml = "0.8"

[profile.dev]
debug = 0
