[package]
name = "rescribe-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rescribe-read-markdown]
path = "../crates/readers/rescribe-read-markdown"

[dependencies.rescribe-read-html]
path = "../crates/readers/rescribe-read-html"

[dependencies.rescribe-read-latex]
path = "../crates/readers/rescribe-read-latex"

[dependencies.rescribe-read-org]
path = "../crates/readers/rescribe-read-org"

[dependencies.rescribe-write-org]
path = "../crates/writers/rescribe-write-org"

[dependencies.rescribe-read-pdf]
path = "../crates/readers/rescribe-read-pdf"

[dependencies.rescribe-read-pandoc-json]
path = "../crates/readers/rescribe-read-pandoc-json"

[dependencies.rescribe-write-markdown]
path = "../crates/writers/rescribe-write-markdown"

[dependencies.rescribe-write-html]
path = "../crates/writers/rescribe-write-html"

[dependencies.rescribe-read-djot]
path = "../crates/readers/rescribe-read-djot"

[dependencies.rescribe-write-djot]
path = "../crates/writers/rescribe-write-djot"

[dependencies.rtf-fmt]
path = "../crates/formats/rtf-fmt"

[dependencies.rescribe-read-rtf]
path = "../crates/readers/rescribe-read-rtf"

[dependencies.rescribe-write-rtf]
path = "../crates/writers/rescribe-write-rtf"

[dependencies.rescribe-read-docx]
path = "../crates/readers/rescribe-read-docx"

[dependencies.rescribe-write-docx]
path = "../crates/writers/rescribe-write-docx"

[dependencies.rescribe-read-xlsx]
path = "../crates/readers/rescribe-read-xlsx"

[dependencies.rescribe-write-xlsx]
path = "../crates/writers/rescribe-write-xlsx"

[dependencies.rescribe-read-pptx]
path = "../crates/readers/rescribe-read-pptx"

[dependencies.rescribe-write-pptx]
path = "../crates/writers/rescribe-write-pptx"

[dependencies.rescribe-read-rst]
path = "../crates/readers/rescribe-read-rst"

[dependencies.rescribe-write-rst]
path = "../crates/writers/rescribe-write-rst"

[dependencies.rescribe-read-asciidoc]
path = "../crates/readers/rescribe-read-asciidoc"

[dependencies.rescribe-write-asciidoc]
path = "../crates/writers/rescribe-write-asciidoc"

[dependencies.rescribe-read-textile]
path = "../crates/readers/rescribe-read-textile"

[dependencies.rescribe-write-textile]
path = "../crates/writers/rescribe-write-textile"

[dependencies.rescribe-core]
path = "../crates/rescribe-core"

[dependencies.rescribe-std]
path = "../crates/nodes/rescribe-std"

[[bin]]
name = "fuzz_markdown_reader"
path = "fuzz_targets/markdown_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_html_reader"
path = "fuzz_targets/html_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_latex_reader"
path = "fuzz_targets/latex_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_org_reader"
path = "fuzz_targets/org_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pdf_reader"
path = "fuzz_targets/pdf_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pandoc_json_reader"
path = "fuzz_targets/pandoc_json_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markdown_roundtrip"
path = "fuzz_targets/markdown_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_html_roundtrip"
path = "fuzz_targets/html_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_djot_reader"
path = "fuzz_targets/djot_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_djot_roundtrip"
path = "fuzz_targets/djot_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rtf_reader"
path = "fuzz_targets/rtf_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rtf_roundtrip"
path = "fuzz_targets/rtf_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rtf_writer"
path = "fuzz_targets/rtf_writer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_docx_reader"
path = "fuzz_targets/docx_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_docx_roundtrip"
path = "fuzz_targets/docx_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xlsx_reader"
path = "fuzz_targets/xlsx_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xlsx_roundtrip"
path = "fuzz_targets/xlsx_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pptx_reader"
path = "fuzz_targets/pptx_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pptx_roundtrip"
path = "fuzz_targets/pptx_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rst_reader"
path = "fuzz_targets/rst_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rst_roundtrip"
path = "fuzz_targets/rst_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_asciidoc_reader"
path = "fuzz_targets/asciidoc_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_asciidoc_roundtrip"
path = "fuzz_targets/asciidoc_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_org_roundtrip"
path = "fuzz_targets/org_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_textile_reader"
path = "fuzz_targets/textile_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_textile_roundtrip"
path = "fuzz_targets/textile_roundtrip.rs"
test = false
doc = false
bench = false
