[package]
name = "rescribe-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.rescribe-read-markdown]
path = "../crates/readers/rescribe-read-markdown"
features = ["pulldown"]

[dependencies.rescribe-read-html]
path = "../crates/readers/rescribe-read-html"

[dependencies.rescribe-read-latex]
path = "../crates/readers/rescribe-read-latex"

[dependencies.rescribe-read-org]
path = "../crates/readers/rescribe-read-org"

[dependencies.rescribe-write-org]
path = "../crates/writers/rescribe-write-org"

[dependencies.rescribe-read-pdf]
path = "../crates/readers/rescribe-read-pdf"

[dependencies.rescribe-read-pandoc-json]
path = "../crates/readers/rescribe-read-pandoc-json"

[dependencies.rescribe-write-markdown]
path = "../crates/writers/rescribe-write-markdown"

[dependencies.rescribe-write-html]
path = "../crates/writers/rescribe-write-html"

[dependencies.djot-fmt]
path = "../crates/formats/djot-fmt"

[dependencies.rescribe-read-djot]
path = "../crates/readers/rescribe-read-djot"

[dependencies.rescribe-write-djot]
path = "../crates/writers/rescribe-write-djot"

[dependencies.rtf-fmt]
path = "../crates/formats/rtf-fmt"

[dependencies.rescribe-read-rtf]
path = "../crates/readers/rescribe-read-rtf"

[dependencies.rescribe-write-rtf]
path = "../crates/writers/rescribe-write-rtf"

[dependencies.rescribe-read-docx]
path = "../crates/readers/rescribe-read-docx"

[dependencies.rescribe-write-docx]
path = "../crates/writers/rescribe-write-docx"

[dependencies.rescribe-read-xlsx]
path = "../crates/readers/rescribe-read-xlsx"

[dependencies.rescribe-write-xlsx]
path = "../crates/writers/rescribe-write-xlsx"

[dependencies.rescribe-read-pptx]
path = "../crates/readers/rescribe-read-pptx"

[dependencies.rescribe-write-pptx]
path = "../crates/writers/rescribe-write-pptx"

[dependencies.rescribe-read-man]
path = "../crates/readers/rescribe-read-man"

[dependencies.rescribe-write-man]
path = "../crates/writers/rescribe-write-man"

[dependencies.rescribe-read-rst]
path = "../crates/readers/rescribe-read-rst"

[dependencies.rescribe-write-rst]
path = "../crates/writers/rescribe-write-rst"

[dependencies.rescribe-read-asciidoc]
path = "../crates/readers/rescribe-read-asciidoc"

[dependencies.rescribe-write-asciidoc]
path = "../crates/writers/rescribe-write-asciidoc"

[dependencies.rescribe-read-textile]
path = "../crates/readers/rescribe-read-textile"

[dependencies.rescribe-write-textile]
path = "../crates/writers/rescribe-write-textile"

[dependencies.rescribe-read-muse]
path = "../crates/readers/rescribe-read-muse"

[dependencies.rescribe-write-muse]
path = "../crates/writers/rescribe-write-muse"

[dependencies.rescribe-read-t2t]
path = "../crates/readers/rescribe-read-t2t"

[dependencies.rescribe-write-t2t]
path = "../crates/writers/rescribe-write-t2t"

[dependencies.rescribe-read-fountain]
path = "../crates/readers/rescribe-read-fountain"

[dependencies.rescribe-write-fountain]
path = "../crates/writers/rescribe-write-fountain"

[dependencies.rescribe-read-bbcode]
path = "../crates/readers/rescribe-read-bbcode"

[dependencies.rescribe-write-bbcode]
path = "../crates/writers/rescribe-write-bbcode"

[dependencies.rescribe-read-markua]
path = "../crates/readers/rescribe-read-markua"

[dependencies.rescribe-write-markua]
path = "../crates/writers/rescribe-write-markua"

[dependencies.rescribe-read-ansi]
path = "../crates/readers/rescribe-read-ansi"

[dependencies.rescribe-write-ansi]
path = "../crates/writers/rescribe-write-ansi"

[dependencies.rescribe-read-pod]
path = "../crates/readers/rescribe-read-pod"

[dependencies.rescribe-write-pod]
path = "../crates/writers/rescribe-write-pod"

[dependencies.rescribe-read-haddock]
path = "../crates/readers/rescribe-read-haddock"

[dependencies.rescribe-write-haddock]
path = "../crates/writers/rescribe-write-haddock"

[dependencies.rescribe-read-creole]
path = "../crates/readers/rescribe-read-creole"

[dependencies.rescribe-write-creole]
path = "../crates/writers/rescribe-write-creole"

[dependencies.rescribe-read-dokuwiki]
path = "../crates/readers/rescribe-read-dokuwiki"

[dependencies.rescribe-write-dokuwiki]
path = "../crates/writers/rescribe-write-dokuwiki"

[dependencies.rescribe-read-vimwiki]
path = "../crates/readers/rescribe-read-vimwiki"

[dependencies.rescribe-write-vimwiki]
path = "../crates/writers/rescribe-write-vimwiki"

[dependencies.rescribe-read-zimwiki]
path = "../crates/readers/rescribe-read-zimwiki"

[dependencies.rescribe-write-zimwiki]
path = "../crates/writers/rescribe-write-zimwiki"

[dependencies.rescribe-read-xwiki]
path = "../crates/readers/rescribe-read-xwiki"

[dependencies.rescribe-write-xwiki]
path = "../crates/writers/rescribe-write-xwiki"

[dependencies.rescribe-read-twiki]
path = "../crates/readers/rescribe-read-twiki"

[dependencies.rescribe-write-twiki]
path = "../crates/writers/rescribe-write-twiki"

[dependencies.rescribe-read-tikiwiki]
path = "../crates/readers/rescribe-read-tikiwiki"

[dependencies.rescribe-write-tikiwiki]
path = "../crates/writers/rescribe-write-tikiwiki"

[dependencies.rescribe-read-jira]
path = "../crates/readers/rescribe-read-jira"

[dependencies.rescribe-write-jira]
path = "../crates/writers/rescribe-write-jira"

[dependencies.rescribe-core]
path = "../crates/rescribe-core"

[dependencies.rescribe-std]
path = "../crates/nodes/rescribe-std"

[dependencies.csv-fmt]
path = "../crates/formats/csv-fmt"

[dependencies.tsv-fmt]
path = "../crates/formats/tsv-fmt"

[dependencies.ris]
path = "../crates/formats/ris"

[dependencies.texinfo]
path = "../crates/formats/texinfo"

[dependencies.mediawiki-fmt]
path = "../crates/formats/mediawiki-fmt"

[dependencies.rescribe-read-odt]
path = "../crates/readers/rescribe-read-odt"

[dependencies.rescribe-read-fb2]
path = "../crates/readers/rescribe-read-fb2"

[dependencies.rescribe-read-docbook]
path = "../crates/readers/rescribe-read-docbook"

[dependencies.rescribe-read-jats]
path = "../crates/readers/rescribe-read-jats"

[dependencies.rescribe-read-opml]
path = "../crates/readers/rescribe-read-opml"

[dependencies.rescribe-read-tei]
path = "../crates/readers/rescribe-read-tei"

[dependencies.commonmark-fmt]
path = "../crates/formats/commonmark-fmt"
features = ["arbitrary"]

[dependencies.rescribe-read-commonmark]
path = "../crates/readers/rescribe-read-commonmark"

[dependencies.rescribe-read-gfm]
path = "../crates/readers/rescribe-read-gfm"

[dependencies.rescribe-read-markdown-strict]
path = "../crates/readers/rescribe-read-markdown-strict"

[dependencies.rescribe-read-multimarkdown]
path = "../crates/readers/rescribe-read-multimarkdown"

[dependencies.rescribe-read-epub]
path = "../crates/readers/rescribe-read-epub"

[dependencies.rescribe-read-bibtex]
path = "../crates/readers/rescribe-read-bibtex"

[dependencies.rescribe-read-csl-json]
path = "../crates/readers/rescribe-read-csl-json"

[dependencies.rescribe-read-ipynb]
path = "../crates/readers/rescribe-read-ipynb"

[dependencies.rescribe-read-biblatex]
path = "../crates/readers/rescribe-read-biblatex"

[dependencies.rescribe-read-endnotexml]
path = "../crates/readers/rescribe-read-endnotexml"

[dependencies.rescribe-read-native]
path = "../crates/readers/rescribe-read-native"

[dependencies.rescribe-write-beamer]
path = "../crates/writers/rescribe-write-beamer"

[dependencies.rescribe-write-chunkedhtml]
path = "../crates/writers/rescribe-write-chunkedhtml"

[dependencies.rescribe-write-context]
path = "../crates/writers/rescribe-write-context"

[dependencies.rescribe-write-dzslides]
path = "../crates/writers/rescribe-write-dzslides"

[dependencies.rescribe-write-icml]
path = "../crates/writers/rescribe-write-icml"

[dependencies.rescribe-write-ms]
path = "../crates/writers/rescribe-write-ms"

[dependencies.rescribe-write-plaintext]
path = "../crates/writers/rescribe-write-plaintext"

[dependencies.rescribe-write-revealjs]
path = "../crates/writers/rescribe-write-revealjs"

[dependencies.rescribe-write-s5]
path = "../crates/writers/rescribe-write-s5"

[dependencies.rescribe-write-slideous]
path = "../crates/writers/rescribe-write-slideous"

[dependencies.rescribe-write-slidy]
path = "../crates/writers/rescribe-write-slidy"

[[bin]]
name = "fuzz_markdown_reader"
path = "fuzz_targets/markdown_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_html_reader"
path = "fuzz_targets/html_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_latex_reader"
path = "fuzz_targets/latex_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_org_reader"
path = "fuzz_targets/org_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pdf_reader"
path = "fuzz_targets/pdf_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pandoc_json_reader"
path = "fuzz_targets/pandoc_json_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markdown_roundtrip"
path = "fuzz_targets/markdown_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markdown_treesitter_reader"
path = "fuzz_targets/markdown_treesitter_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markdown_parity"
path = "fuzz_targets/markdown_parity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_html_roundtrip"
path = "fuzz_targets/html_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_djot_reader"
path = "fuzz_targets/djot_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_djot_roundtrip"
path = "fuzz_targets/djot_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_djot_fmt_reader"
path = "fuzz_targets/djot_fmt_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_djot_fmt_roundtrip"
path = "fuzz_targets/djot_fmt_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rtf_reader"
path = "fuzz_targets/rtf_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rtf_roundtrip"
path = "fuzz_targets/rtf_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rtf_writer"
path = "fuzz_targets/rtf_writer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_docx_reader"
path = "fuzz_targets/docx_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_docx_roundtrip"
path = "fuzz_targets/docx_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xlsx_reader"
path = "fuzz_targets/xlsx_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xlsx_roundtrip"
path = "fuzz_targets/xlsx_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pptx_reader"
path = "fuzz_targets/pptx_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pptx_roundtrip"
path = "fuzz_targets/pptx_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_man_reader"
path = "fuzz_targets/man_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_man_roundtrip"
path = "fuzz_targets/man_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rst_reader"
path = "fuzz_targets/rst_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_rst_roundtrip"
path = "fuzz_targets/rst_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_asciidoc_reader"
path = "fuzz_targets/asciidoc_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_asciidoc_roundtrip"
path = "fuzz_targets/asciidoc_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_org_roundtrip"
path = "fuzz_targets/org_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_textile_reader"
path = "fuzz_targets/textile_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_textile_roundtrip"
path = "fuzz_targets/textile_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_muse_reader"
path = "fuzz_targets/muse_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_muse_roundtrip"
path = "fuzz_targets/muse_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_t2t_reader"
path = "fuzz_targets/t2t_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_t2t_roundtrip"
path = "fuzz_targets/t2t_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fountain_reader"
path = "fuzz_targets/fountain_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fountain_roundtrip"
path = "fuzz_targets/fountain_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bbcode_reader"
path = "fuzz_targets/bbcode_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bbcode_roundtrip"
path = "fuzz_targets/bbcode_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markua_reader"
path = "fuzz_targets/markua_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markua_roundtrip"
path = "fuzz_targets/markua_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ansi_reader"
path = "fuzz_targets/ansi_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ansi_roundtrip"
path = "fuzz_targets/ansi_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pod_reader"
path = "fuzz_targets/pod_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pod_roundtrip"
path = "fuzz_targets/pod_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_haddock_reader"
path = "fuzz_targets/haddock_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_haddock_roundtrip"
path = "fuzz_targets/haddock_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_creole_reader"
path = "fuzz_targets/creole_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_creole_roundtrip"
path = "fuzz_targets/creole_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dokuwiki_reader"
path = "fuzz_targets/dokuwiki_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dokuwiki_roundtrip"
path = "fuzz_targets/dokuwiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vimwiki_reader"
path = "fuzz_targets/vimwiki_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vimwiki_roundtrip"
path = "fuzz_targets/vimwiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_zimwiki_reader"
path = "fuzz_targets/zimwiki_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_zimwiki_roundtrip"
path = "fuzz_targets/zimwiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xwiki_reader"
path = "fuzz_targets/xwiki_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_xwiki_roundtrip"
path = "fuzz_targets/xwiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_twiki_reader"
path = "fuzz_targets/twiki_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_twiki_roundtrip"
path = "fuzz_targets/twiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tikiwiki_reader"
path = "fuzz_targets/tikiwiki_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tikiwiki_roundtrip"
path = "fuzz_targets/tikiwiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jira_reader"
path = "fuzz_targets/jira_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_jira_roundtrip"
path = "fuzz_targets/jira_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csv_reader"
path = "fuzz_targets/csv_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csv_roundtrip"
path = "fuzz_targets/csv_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tsv_reader"
path = "fuzz_targets/tsv_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tsv_roundtrip"
path = "fuzz_targets/tsv_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ris_reader"
path = "fuzz_targets/ris_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ris_roundtrip"
path = "fuzz_targets/ris_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_texinfo_reader"
path = "fuzz_targets/texinfo_reader.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_texinfo_roundtrip"
path = "fuzz_targets/texinfo_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mediawiki_reader"
path = "fuzz_targets/mediawiki_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mediawiki_roundtrip"
path = "fuzz_targets/mediawiki_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_odt_reader"
path = "fuzz_targets/odt_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fb2_reader"
path = "fuzz_targets/fb2_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_docbook_reader"
path = "fuzz_targets/docbook_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_jats_reader"
path = "fuzz_targets/jats_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_opml_reader"
path = "fuzz_targets/opml_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tei_reader"
path = "fuzz_targets/tei_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_commonmark_reader"
path = "fuzz_targets/commonmark_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_commonmark_roundtrip"
path = "fuzz_targets/commonmark_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_gfm_reader"
path = "fuzz_targets/gfm_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_markdown_strict_reader"
path = "fuzz_targets/markdown_strict_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_multimarkdown_reader"
path = "fuzz_targets/multimarkdown_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epub_reader"
path = "fuzz_targets/epub_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bibtex_reader"
path = "fuzz_targets/bibtex_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_csl_json_reader"
path = "fuzz_targets/csl_json_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ipynb_reader"
path = "fuzz_targets/ipynb_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_biblatex_reader"
path = "fuzz_targets/biblatex_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_endnotexml_reader"
path = "fuzz_targets/endnotexml_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_native_reader"
path = "fuzz_targets/native_reader.rs"
test = false
doc = false

[[bin]]
name = "fuzz_beamer_writer"
path = "fuzz_targets/beamer_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_chunkedhtml_writer"
path = "fuzz_targets/chunkedhtml_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_context_writer"
path = "fuzz_targets/context_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dzslides_writer"
path = "fuzz_targets/dzslides_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_icml_writer"
path = "fuzz_targets/icml_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ms_writer"
path = "fuzz_targets/ms_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_plaintext_writer"
path = "fuzz_targets/plaintext_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_revealjs_writer"
path = "fuzz_targets/revealjs_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_s5_writer"
path = "fuzz_targets/s5_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_slideous_writer"
path = "fuzz_targets/slideous_writer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_slidy_writer"
path = "fuzz_targets/slidy_writer.rs"
test = false
doc = false
